# BotCategory

./: .dockerignore  .env.example  .gitignore  Dockerfile  FSM.py  README.md  bot.py  config.py  dispatcher.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
database/: car_active_inactive.py  car_funcs.py  create_tables.py  main.py  pool.py  tasks.sqlite
errors/: error_handling.py
filters/: __init__.py  chat_filters.py
handlers/: __init__.py  scheduler.py
handlers/admin_handlers/: add_car.py  cars_settings.py  connect_admin_routers.py  expiring.py  functions.py  start_handling.py  tags_settings.py
handlers/admin_handlers/keyboards/: inline_keyboards.py  reply_keyboards.py
handlers/car_handlers/: connect_model_routers.py  start_handling.py
handlers/client_handlers/: car_info.py  catalog.py  cities.py  connect_client_routers.py  functions.py  other_messages.py  start_handling.py  tags.py
handlers/client_handlers/keyboards/: __init__.py  inline_keyboards.py  reply_keyboards.py
handlers/client_handlers/texts/: get_text.py  texts.json
logger/: create_logger.py  filter.py
tests/: test_basic.py
